# Hierarchical_data

./: README  db.sqlite3  manage.py  pyproject.toml
Data_App/: admin.py  apps.py  forms.py  models.py  views.py
Data_App/migrations/: 0001_initial.py
Data_App/templates/: add_post_form.html  index.html
Hierarchical_Data/: asgi.py  settings.py  urls.py  wsgi.py
